[gd_scene load_steps=9 format=3 uid="uid://cllt6yprt8qlm"]

[ext_resource type="Script" uid="uid://b4yur38g312x1" path="res://src/date/date_select_display_choice.gd" id="1_h0k2b"]
[ext_resource type="Texture2D" uid="uid://dmyim7ia7ixml" path="res://data/assets/date/art/transparent_purple_rounded_rect_8px9patch.png" id="1_hbjvt"]
[ext_resource type="Shader" uid="uid://botyu7ffeam5t" path="res://src/date/glow.gdshader" id="2_5pnfk"]
[ext_resource type="FontFile" uid="uid://im85rm1hu4m8" path="res://data/assets/general/art/PoetsenOne-Regular.ttf" id="2_no8wh"]
[ext_resource type="Texture2D" uid="uid://dtc11chhxb21p" path="res://data/assets/date/art/grey_rounded_bottom.png" id="4_8yxsh"]
[ext_resource type="Texture2D" uid="uid://uwcqdvqqu7n4" path="res://data/assets/date/art/locked.png" id="5_mpm48"]
[ext_resource type="Texture2D" uid="uid://bq61jngjoejcy" path="res://data/assets/date/art/transparent_red_hard_rounded_rect_8px9patch.png" id="7_abpe1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ilsbm"]
shader = ExtResource("2_5pnfk")
shader_parameter/glow_color = Color(1, 1, 1, 1)
shader_parameter/glow_width = 8.0
shader_parameter/glow_intensity = 0.9

[node name="Node2D" type="Node2D"]
script = ExtResource("1_h0k2b")

[node name="ChoiceButton" type="TextureButton" parent="."]
offset_right = 167.0
offset_bottom = 167.0
texture_normal = ExtResource("1_hbjvt")
stretch_mode = 4

[node name="ChoiceLabel" type="Label" parent="ChoiceButton"]
layout_mode = 0
offset_left = 15.0
offset_right = 156.0
offset_bottom = 65.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_constants/line_spacing = 1
theme_override_fonts/font = ExtResource("2_no8wh")
theme_override_font_sizes/font_size = 50
text = "Talk"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="TopDivider" type="ColorRect" parent="ChoiceButton"]
layout_mode = 0
offset_left = 15.0
offset_top = 74.0
offset_right = 156.0
offset_bottom = 75.0

[node name="MidDivider" type="ColorRect" parent="ChoiceButton"]
layout_mode = 0
offset_left = 15.0
offset_top = 119.0
offset_right = 156.0
offset_bottom = 120.0

[node name="FooterBg" type="NinePatchRect" parent="ChoiceButton"]
layout_mode = 0
offset_top = 144.0
offset_right = 167.0
offset_bottom = 167.0
texture = ExtResource("4_8yxsh")
patch_margin_left = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="FooterText" type="Label" parent="ChoiceButton"]
layout_mode = 0
offset_top = 144.0
offset_right = 167.0
offset_bottom = 167.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_no8wh")
theme_override_font_sizes/font_size = 15
text = "Progress Needed"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PossibleMemoriesLabel" type="Label" parent="ChoiceButton"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 73.0
offset_right = 167.0
offset_bottom = 120.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_constants/line_spacing = -2
theme_override_fonts/font = ExtResource("2_no8wh")
theme_override_font_sizes/font_size = 18
text = "Memories 
Available"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Locked" type="TextureRect" parent="ChoiceButton"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 167.0
offset_bottom = 144.0
texture = ExtResource("5_mpm48")
expand_mode = 1

[node name="Hover" type="TextureRect" parent="ChoiceButton"]
unique_name_in_owner = true
visible = false
material = SubResource("ShaderMaterial_ilsbm")
layout_mode = 0
offset_right = 167.0
offset_bottom = 167.0
texture = ExtResource("7_abpe1")

[connection signal="mouse_entered" from="ChoiceButton" to="." method="_on_choice_button_mouse_entered"]
[connection signal="mouse_exited" from="ChoiceButton" to="." method="_on_choice_button_mouse_exited"]
[connection signal="pressed" from="ChoiceButton" to="." method="_on_choice_button_pressed"]
